--- a/SE.html
+++ b/SE.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software engineering</title>
-    <link rel="stylesheet" href="../CSS/se.css">
+    <link rel="stylesheet" href="./se.css">
 </head>
 <body>
     <div class="content">
     <div class="heading">
         <h1>&mdash;Software engineering&mdash; </h1>
     </div>
-        <img style="width: 100%; height: 70vh;" src="../images/Se1.png" alt="">
+        <img style="width: 100%; height: 70vh;" src="./Se1.png" alt="">
 
         <b>
             <h2>What is Software Engineering</h2>
@@ -38,7 +38,7 @@
                 <li><p> as the term embodying the advocacy of a specific approach to computer programming, one that urges that it be treated as an engineering discipline rather than an art or a craft, and advocates the codification of recommended practices</p></li>
                 <li></li>
             </ul>
-            <img style="padding-left: 30%;height: 400px;" src="../images/se2.png" alt="">
+            <img style="padding-left: 30%;height: 400px;" src="./se2.png" alt="">
             <h2>What role does software engineering play in data science?</h2>
             <p>Data science deals with data and prediction and it is often not obvious what a software engineer has to do with this data-centric or data-driven team. This is because:</p>
             <ul>
@@ -65,10 +65,10 @@ He/she has to ensure that the APIs created from the model is scalable, flexible 
             <h2>Skillset</h2>
             <p>The skills that they require is usually Hadoop, SQL, NoSQL, Hive, MapReduce, Pig.L. Some tools that are common to this profession are MySQL, MongoDB, DashDB and Cassandra, and it is expected that they be thorough in using them.</p>
             <span style="display:inline-flex;">
-                <img style="width: 40%; height: 10%; margin-top: 15px; margin-left: 10%;" src="../images/Se3.png" alt="">
-                <img style="width: 40%; height: 10%; margin-top: -100px; margin-left: 10%; padding-top: 9%;" src="../images/Se4.png" alt="">
+                <img style="width: 40%; height: 10%; margin-top: 15px; margin-left: 10%;" src="./Se3.png" alt="">
+                <img style="width: 40%; height: 10%; margin-top: -100px; margin-left: 10%; padding-top: 9%;" src="./Se4.png" alt="">
             </span>
-            <img style="margin-top: -320px; margin-left: 200px; height: 350px;" src="../images/Se5.png" alt="">
+            <img style="margin-top: -320px; margin-left: 200px; height: 350px;" src="./Se5.png" alt="">
             <h2>Outline of software engineering:</h2>
             
             <ul>
