--- a/dataVisualization.html
+++ b/dataVisualization.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/dataVisualization.css">
+    <link rel="stylesheet" href="./dataVisualization.css">
     <title>Data Visualization</title>
 </head>
 <body>
@@ -37,8 +37,8 @@
 
                         </p>
                         <span style="display:inline-flex;">
-                        <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%;" src="../images/visualization 1.png" alt="">
-                        <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%; padding-top: 9%;" src="../images/visu2.png" alt="">
+                        <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%;" src="./visualization 1.png" alt="">
+                        <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%; padding-top: 9%;" src="./visu2.png" alt="">
                     </span>
                     </li>
                     
@@ -52,8 +52,8 @@
                 Specifically, data visualization uses visual data to communicate information in a manner that is universal, fast, and effective. This practice can help companies identify which areas need to be improved, which factors affect customer satisfaction and dissatisfaction, and what to do with specific products (where should they go and who should they be sold to). Visualized data gives stakeholders, business owners, and decision-makers a better prediction of sales volumes and future growth.
             </p>
             <span style="display:inline-flex;">
-                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%;" src="../images/visu3.png" alt="">
-                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%; padding-top: 9%;" src="../images/visu4.png" alt="">
+                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%;" src="./visu3.png" alt="">
+                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%; padding-top: 9%;" src="./visu4.png" alt="">
             </span>
             <h2>Benefits of Data Visualization?</h2>
             <p>Data visualization positively affects an organization’s decision-making process with interactive visual representations of data. Businesses can now recognize patterns more quickly because they can interpret data in graphical or pictorial forms. 
@@ -81,8 +81,8 @@
                     <p>The ability to obtain information quickly and easily with data displayed clearly on a functional dashboard allows businesses to act and respond to findings swiftly and helps to avoid making mistakes.  </p></li>
             </ul>
             <span style="display:inline-flex;">
-                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%;" src="../images/visu6.png" alt="">
-                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 5%; padding-top: 5%;" src="../images/visu7.png" alt="">
+                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%;" src="./visu6.png" alt="">
+                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 5%; padding-top: 5%;" src="./visu7.png" alt="">
             </span>
 
             <h2>Tools used in data visualization:</h2>
@@ -151,10 +151,10 @@
                     </li>
             </ul>
             <span style="display:inline-flex;">
-                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%;" src="../images/visu8.png" alt="">
-                <img style="width: 40%; height: 10%; margin-top: 10px; margin-left: 5%; padding-top: 5%;" src="../images/visu9.png" alt="">
+                <img style="width: 40%; height: 10%; margin-top: 50px; margin-left: 10%;" src="./visu8.png" alt="">
+                <img style="width: 40%; height: 10%; margin-top: 10px; margin-left: 5%; padding-top: 5%;" src="./visu9.png" alt="">
             </span>
-            <img style="padding-left: 30%; padding-top: 2%;" src="../images/visu10.png" alt="">
+            <img style="padding-left: 30%; padding-top: 2%;" src="./visu10.png" alt="">
 
             <h2>Real Time Application Data Visualization:</h2>
             <p>Real-time data visualization takes visuals to the next level by letting you update charts and graphs in real-time. Having real-time data available helps stakeholders to make better decisions that are based on actual data rather than on intuition.
@@ -170,8 +170,8 @@
                 <li><h3>User Interface</h3>
                 <p>A real-time visualization requires a flexible, interactive user interface where changes are easily displayed based on changes sent from the stream of data.
                     <span style="display:inline-flex;">
-                        <img style="width: 40%; height: 10%; margin-top: 30px; margin-left: 10%;" src="../images/visu11.png" alt="">
-                        <img style="width: 40%; height: 10%; margin-top: 60px; margin-left: 5%; padding-top: 5%;" src="../images/visu12.png" alt="">
+                        <img style="width: 40%; height: 10%; margin-top: 30px; margin-left: 10%;" src="./visu11.png" alt="">
+                        <img style="width: 40%; height: 10%; margin-top: 60px; margin-left: 5%; padding-top: 5%;" src="./visu12.png" alt="">
                     </span>
                 </p></li>
             </ul>
