--- a/ml.html
+++ b/ml.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Machine Learning</title>
-    <link rel="stylesheet" href="../CSS/ml.css">
+    <link rel="stylesheet" href="./ml.css">
 </head>
 <body>
     <div class="content">
@@ -49,16 +49,16 @@ Machine learning is an application of artificial intelligence (AI) that provides
     <b>
         <ul>
             <li>Supervised Machine Learning</li>
-            <img style="padding-left: 300px;" src="../images/Main-supervised-learning-.png" alt="">
+            <img style="padding-left: 300px;" src="./Main-supervised-learning-.png" alt="">
 
             
             <hr style="margin-top: 30px; margin-bottom: 30px;">
             <li>Unsupervised Machine Learning</li>
-            <img style="width: 80%; padding-left: 300px;" src="../images/Unsupervised-Learning.png" alt="">
+            <img style="width: 80%; padding-left: 300px;" src="./Unsupervised-Learning.png" alt="">
             <hr style="margin-top: 30px; margin-bottom: 30px;">
 
             <li>Reinforcement Machine Learning</li>
-            <img width="30%" style="margin-left: 500px;" src="../images/reinforcement.jpg" alt="">
+            <img width="30%" style="margin-left: 500px;" src="./reinforcement.jpg" alt="">
             <hr style="margin-top: 30px; margin-bottom: 30px;">
 
         </ul>
@@ -84,7 +84,7 @@ Machine learning is an application of artificial intelligence (AI) that provides
             <h3 style="padding-left: 30px; padding-top: 30px; font-size: 1.3rem;">-	Regression:</h3>
             <p>A regression problem is when the output variable is a real value, such as “dollars” or “weight”.
                 - Regression technique predicts a single output value using training data.
-                <img style="margin-left: 450px; padding-top: 50px;" src="../images/classification.png" alt="">
+                <img style="margin-left: 450px; padding-top: 50px;" src="./classification.png" alt="">
                 </p>
                 <h2>Some popular examples of supervised machine learning algorithms are:</h2>
                 <b><ul>
@@ -102,7 +102,7 @@ Machine learning is an application of artificial intelligence (AI) that provides
                             <li>Time of the day</li>
                             <li>Holidays</li>
 
-                            <img style="margin-top: 30px; margin-left: 90px;" src="../images/learning phase.png" alt="">
+                            <img style="margin-top: 30px; margin-left: 90px;" src="./learning phase.png" alt="">
                         </ul></b>
 
                         <h2>Working of Supervised Machine Learning</h2>
