--- a/statistics.html
+++ b/statistics.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Statistics</title>
-    <link rel="stylesheet" href="../CSS/statistics.css">
+    <link rel="stylesheet" href="./statistics.css">
 
 </head>
 <body>
@@ -66,7 +66,7 @@
                         </span>
                         <li><h3>Hypotheses Testing</h3></li>
 
-                        <img style="margin-left: 300px;" src="../images/hypothesis.jpg" alt="">
+                        <img style="margin-left: 300px;" src="./hypothesis.jpg" alt="">
                         <p>If we know whether to perform some action or not. Will those actions give a positive result or a negative result then we can have an added advantage of doing the right things. <u> Hypotheses Testing gives identifying the situation where the action should be taken or not based on what results will it produce.</u>
                             <br>
                             There are other tests as well like A/B Testing, Z Test, T-Test, Null Hypothesis with similar relevance. <br> <br>
@@ -86,7 +86,7 @@
                 </li>
                 <li><h3>Regression</h3>
 
-                    <img style="margin-left: 100px;" src="../images/understanding_of_linear_regression_with_python_1.png" alt="">
+                    <img style="margin-left: 100px;" src="./understanding_of_linear_regression_with_python_1.png" alt="">
                 <p>
                     The regression in simple terms is finding out a relationship between the independent and dependent variables. Regression can be of two types broadly – Linear Regression, Multi Linear Regression. <br><br>
                    <span style="color:navy;">Linear Regression : Y = aX + C <br>
