--- a/dataprocessing.html
+++ b/dataprocessing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Processing</title>
-    <link rel="stylesheet" href="../CSS/dataprocessing .css">
+    <link rel="stylesheet" href="./dataprocessing .css">
 </head>
 <body>
     <div class="content">
@@ -13,7 +13,7 @@
         <div class="heading">
             <h1>&mdash;Software engineering&mdash; </h1>
         </div>
-        <img style="width: 100%; height: 60vh;" src="../images/dataprocessing1.png" alt="">
+        <img style="width: 100%; height: 60vh;" src="./dataprocessing1.png" alt="">
         <b>
             <h2>Data Pre-Processing</h2>
             <p><i>In any Machine Learning process, Data Preprocessing is that step in which the data gets transformed, or Encoded, to bring it to such a state that now the machine can easily parse it. In other words, the features of the data can now be easily interpreted by the algorithm.</i>
@@ -23,7 +23,7 @@
             When creating a machine learning project, it is not always a case that we come across the clean and formatted data. And while doing any operation with data, it is mandatory to clean it and put in a formatted way. So for this, we use data preprocessing task.
 
             </p>
-            <img style="margin-left: 27%; margin-top: 50px;" src="../images/dp2.png" alt="">
+            <img style="margin-left: 27%; margin-top: 50px;" src="./dp2.png" alt="">
             <h2>Why is Data preprocessing important?</h2>
             <p>Preprocessing of data is mainly to check the data quality. The quality can be checked by the following:
                 <br>
@@ -45,7 +45,7 @@
 
                 
             </ul>
-            <img style=" padding-left: 60%; margin-top: -500px; height: 400px;" src="../images/dp4.png" alt="">
+            <img style=" padding-left: 60%; margin-top: -500px; height: 400px;" src="./dp4.png" alt="">
             <h2>Major Tasks in Data Preprocessing:</h2>
             <ul>
                 <li>Data cleaning</li>
@@ -99,7 +99,7 @@ Detecting and resolving data value concepts: The data taken from different datab
 <h3>Normalization:</h3>
 <p>It is the method of scaling the data so that it can be represented in a smaller range. Example ranging from -1.0 to 1.0. This article was published as a part of the Data Science Blogathon</p>
 <img  style="margin-left: 18%; margin-top: 25px;"
-src="../images/d5.png" alt="">
+src="./d5.png" alt="">
                 </p>
             </ul>
             <h2>Why is Data preprocessing important?</h2>
@@ -123,12 +123,12 @@ src="../images/d5.png" alt="">
                 import numpy as np <br>
                 dataset = pd.read_csv('Datasets.csv') <br>
                 print (data_set) <br>
-                <img src="../images/dp6.png" alt="">
+                <img src="./dp6.png" alt="">
                 <br>
                 <h3>Extracting independent variable:</h3>
                 <br>
-                <img style="padding-left: 35px;" src="../images/dp7.png" alt="">
-                <img style="margin-left: 20px; margin-top: -900px;" src="../images/dp11.png" alt="">
+                <img style="padding-left: 35px;" src="./dp7.png" alt="">
+                <img style="margin-left: 20px; margin-top: -900px;" src="./dp11.png" alt="">
                 </p>
                 <h2>Filling the dataset with the mean value of the attribute:</h2>
                 <p style="font-family: monospace;">from sklearn.preprocessing import Imputer <br> 
@@ -136,9 +136,9 @@ src="../images/d5.png" alt="">
                     imputerimputer= imputer.fit(x[:, 1:3])  <br>
                     x[:, 1:3]= imputer.transform(x[:, 1:3])  <br>
                     x <br>
-                    <img src="../images/dp8.png" alt="">
+                    <img src="./dp8.png" alt="">
                     </p>
-                    <img style="padding-left: 50%;margin-top: -1200px; height: 490px;" src="../images/dp9.png" alt="">
+                    <img style="padding-left: 50%;margin-top: -1200px; height: 490px;" src="./dp9.png" alt="">
         </b>
 
     </div>
